# openblockperf

./: .gitignore  .readthedocs.yaml  EVENTS.md  README.md  blockperf-install.sh  book.toml  install.sh  justfile  mkdocs.yml  pyproject.toml  servelogs.py
docs/: SUMMARY.md  blockperf-client.md  blockperf-install-manual.md  blockperf-install.md  blockperf-traceoptions.md  blocksample.md  intro.md  peers.md  publish_pypi.md  reading-journald.md  tracer.md
src/blockperf/: __init__.py  __main__.py  apiclient.py  app.py  blockeventgroup.py  blocksamplegroup.py  calidus.py  cli.py  collectors.py  config.py  errors.py  handler.py  logging.py  logreader.py  main.py  models.py  processor.py  ui.py
src/blockperf/apiclient/: base.py  client.py  models.py
src/blockperf/commands/: __init__.py  analyze.py  base.py  monitor.py  register.py  run.py
src/blockperf/core/: config.py  eventcollector.py  eventprocessor.py  events.py  logreader.py
src/blockperf/events/: collector.py  models.py  processor.py  utils.py
src/blockperf/listeners/: base.py  block.py  peer.py
src/blockperf/models/: block.py  event.py  peer.py  samples.py
src/blockperf/nodelogs/: events.py  logreader.py
src/blockperf/services/: eventprocessor.py
src/docs/: intro.md  logreader.md  peers.md  publish.md  publish_pypi.md
src/opbf/: cli.py  client.py  config.py  nodelogs.py
src/openblockperf/: __init__.py  __main__.py  app.py  blocksamplegroup.py  calidus.py  clientid.py  config.py  ekg.py  ekg_.py  errors.py  handler.py  logging.py  logreader.py  utils.py
src/openblockperf/apiclient/: base.py  client.py  models.py
src/openblockperf/commands/: __init__.py  _utils.py  register.py  register_calidus.py  register_ip.py  run.py  version.py
tests/: conftest.py  test_blocksamplegroup.py  test_config.py  test_ekg.py
tests/test_models/: test_events.py  test_peer.py
(+10 files in other folders)
